<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/source_pro_kerala"
            android:icon="@drawable/ic_grade_black_24dp"
            android:title="@string/pro_kerala" />

        <item
            android:id="@+id/source_ganesha_speaks"
            android:icon="@drawable/ic_grade_black_24dp"
            android:title="@string/ganesha_speaks" />

        <item
            android:id="@+id/source_tarot"
            android:icon="@drawable/ic_grade_black_24dp"
            android:title="@string/tarot" />

        <item
            android:id="@+id/source_astropolis"
            android:icon="@drawable/ic_grade_black_24dp"
            android:title="@string/astropolis" />

        <item
            android:id="@+id/source_cainer"
            android:icon="@drawable/ic_grade_black_24dp"
            android:title="@string/cainer" />


    </group>

</menu>
